apps/llama-stack-server/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: llamastack-server
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8321
      targetPort: 8321
  type: ClusterIP
  selector:
    app: llama-stack-server
